# pxeasy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.claude/: settings.local.json
assets/windows/: startnet.cmd
crates/pxe-autoinstall/: Cargo.toml
crates/pxe-autoinstall/src/: lib.rs  tests.rs  windows.rs
crates/pxe-autoinstall/templates/: autounattend.xml
crates/pxe-dhcp/: Cargo.toml
crates/pxe-dhcp/src/: builder.rs  lib.rs  server.rs  tests.rs
crates/pxe-diskimg/: Cargo.toml
crates/pxe-diskimg/src/: lib.rs
crates/pxe-harness/: Cargo.toml
crates/pxe-harness/src/: main.rs  qemu.rs  runner.rs  scenarios.rs  server.rs
crates/pxe-http/: Cargo.toml
crates/pxe-http/src/: lib.rs
crates/pxe-iscsi/: Cargo.toml
crates/pxe-iscsi/src/: iso.rs  lib.rs  login.rs  pdu.rs  scsi.rs  session.rs
crates/pxe-iso/: Cargo.toml
crates/pxe-iso/src/: cdfs.rs  lib.rs  udf.rs
crates/pxe-nbd/: Cargo.toml
crates/pxe-nbd/src/: handler.rs  lib.rs  proto.rs
crates/pxe-nfs/: Cargo.toml
crates/pxe-nfs/src/: lib.rs  mount.rs  nfs3.rs  portmap.rs  rpc.rs  vfs.rs
crates/pxe-profiles/: Cargo.toml
crates/pxe-profiles/src/: error.rs  freebsd.rs  lib.rs  ubuntu.rs  udf.rs  windows.rs
crates/pxe-profiles/tests/: integration.rs
crates/pxe-proto/: Cargo.toml
crates/pxe-proto/src/: error.rs  lib.rs  options.rs  packet.rs  pxe.rs
crates/pxe-proto/tests/: round_trip.rs
crates/pxe-qemu/: Cargo.toml
crates/pxe-qemu/src/: lib.rs
crates/pxe-smb/: Cargo.toml
crates/pxe-smb/src/: constants.rs  lib.rs  proto.rs  server.rs  session.rs
crates/pxe-smb/src/handlers/: file.rs  mod.rs  negotiate.rs  session.rs  tree.rs  utils.rs  vfs.rs
crates/pxe-tftp/: Cargo.toml
crates/pxe-tftp/src/: lib.rs
crates/pxe-ufs/: Cargo.toml
crates/pxe-ufs/src/: builder.rs  format.rs  layout.rs  lib.rs
crates/pxe-wim/: Cargo.toml  build.rs
crates/pxe-wim/src/: lib.rs
crates/pxeasy/: Cargo.toml
crates/pxeasy-core/: Cargo.toml
crates/pxeasy-core/src/: lib.rs
crates/pxeasy-gui/: Cargo.toml
crates/pxeasy-gui/src/: main.rs
crates/pxeasy-runtime/: Cargo.toml  build.rs
crates/pxeasy-runtime/src/: boot.rs  lib.rs  network.rs  runtime.rs  services.rs  wim.rs
crates/pxeasy-runtime/src/flows/: freebsd.rs  linux.rs  windows.rs
crates/pxeasy-runtime/src/host/: iso.rs
crates/pxeasy/src/: cli.rs  main.rs
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  smb.conf
scripts/: qemu-scenario.sh
scripts/qemu-scenarios/: debian-arm64-netboot.env  freebsd-arm64-sanboot.env  ubuntu-arm64-nfs.env
templates/windows/: pxeasy-bootstrap.cmd  startnet.cmd  winpeshl.ini
