[workspace]
members = [
    "crates/pxeasy-gui",
    "crates/pxe-proto",
    "crates/pxe-profiles",
    "crates/pxe-dhcp",
    "crates/pxe-http",
    "crates/pxe-iscsi",
    "crates/pxe-nfs",
    "crates/pxe-smb",
    "crates/pxe-tftp",
    "crates/pxeasy",
    "crates/pxeasy-core",
    "crates/pxeasy-runtime",
    "crates/pxe-qemu",
    "crates/pxe-harness",
    "crates/pxe-ufs",
]
resolver = "2"
