[package]
name = "pxeasy"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
ctrlc = "3"
env_logger = "0.11"
log = "0.4"
if-addrs = "0.13"
serde = { version = "1", features = ["derive"] }
pxe-dhcp = { path = "../pxe-dhcp" }
pxe-http = { path = "../pxe-http" }
pxe-iscsi = { path = "../pxe-iscsi" }
pxe-nbd = { path = "../pxe-nbd" }
pxe-nfs = { path = "../pxe-nfs" }
pxe-profiles = { path = "../pxe-profiles" }
pxe-tftp = { path = "../pxe-tftp" }
toml = "0.9"

[dev-dependencies]
pxe-qemu = { path = "../pxe-qemu" }
tempfile = "3"
