[package]
name = "pxeasy"
version = "0.1.0"
edition = "2021"

[dependencies]
pico-args = "0.5"
ctrlc = "3"
log = "0.4"
env_logger = "0.11"

config = { version = "0.15", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
pxeasy-core = { path = "../pxeasy-core" }
pxe-autoinstall = { path = "../pxe-autoinstall" }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
